(Recent) Revision history for Perl extension Data-Dumper-Interp

6.007 - Require List::Util v1.45 for uniqstr.
        Croak if vis, etc. called in void context (typically a missing "say ")
6.006 - Carp but don't die if invalid $varname is in ivis/divs string
6.005 - Avoid addrvis on temp container for avis/hvis - for test stability
6.004 - Fix bug Maxdepth off-by-1 with Refaddr. Renamed
        set_addrvis_digits -> addrvis_digits, which now gets with undef arg
6.003 - Fixed bug where AUTOLOAD did not preserve $@ etc.
6.001 - Added set_addrvis_digits() & addrvis_forget()

6.000 - 1. Option Refaddr() added to show abbreviated ref addresses.

        2. Shortcut function/method names can now include 'r' to imply
           Refaddr(1) and any number to imply Maxdepth(number).

        3. Shortcut functions/methods are now auto-generated using a naming
           convention: "Modifier" characters are glued onto one of the 5 basic
           method names (ivis, dvis, vis, avis, or hvis) in any order
           with optional underscore separators.  For example using 'viso'
           or 'ovis' or 'vis_o' will generate code to call 'vis' with
           option Objects(0) to show object internals.  Another example is
           dvisr3, dvis3r, dvis_r_3, etc. which calls 'dvis' configured to
           show the abbreviated addresses of any refs in interpolated
           variables, and to show at most 3 levels of structured data.

           This eliminates memory bloat rarely unused subs.  In fact,
           a fixed repertoire of variations is no longer really feasible.

           Methods are created when first called using the AUTOLOAD mechanism.

           import() generates stub declarations for imported functions so
           that prototypes are properly checked; the bodies are generated only
           if/when actually called.

        4. The names 'alvis' and 'hlvis' are deprecated but still supported