@@ -1,7 +1,8 @@
 (Recent) Revision history for Perl extension Data-Dumper-Interp
 
 6.007 - Require List::Util v1.45 for uniqstr.
-        Croak if vis, etc. called in void context (typically a missing "say ")
+        Croak if vis, etc. called in void context (typically a missing "say ").
+        Fix bug where ivis & dvis would not interpolate \$ -> $
 6.006 - Carp but don't die if invalid $varname is in ivis/divs string
 6.005 - Avoid addrvis on temp container for avis/hvis - for test stability
 6.004 - Fix bug Maxdepth off-by-1 with Refaddr. Renamed
